--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 <body>
     <div class="container">
         <h1>Weather App</h1>
-        <form id="location-form">
-            <label for="location-input">Enter Location:</label>
-            <input type="text" id="location-input" placeholder="City, Country" required>
-            <button type="submit">Get Weather</button>
-        </form>
-        <div id="weather-data">
-            <!-- Weather data will be displayed here -->
+        <div class="weather-box">
+            <input type="text" id="location-input" placeholder="Enter location">
+            <button id="fetch-weather">Get Weather</button>
+            <div id="weather-info" class="hidden">
+                <h2 id="location-name"></h2>
+                <p id="weather-description"></p>
+                <p id="temperature"></p>
+                <p id="humidity"></p>
+                <p id="wind-speed"></p>
+            </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
